--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-auto-validate": "^1.19.0",
+    "angular-ladda": "^0.4.3",
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
